fix alignment issues

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,10 +1,3 @@
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
-    position: relative;
-}
-
 #viewDataBtn {
     position: relative;
     top: 0;
@@ -48,24 +41,6 @@
     margin-top: 10px;
 }
 
-.card {
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 20px;
-    background-color: #fff;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-}
-.card-title {
-    margin-bottom: 20px;
-}
-
-.equal-height {
-    display: flex;
-}
-
 .tooltip-inner {
     background-color: #333;
     color: #fff;
@@ -102,6 +77,17 @@ body {
     font-family: Arial, sans-serif;
 }
 
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+    position: relative;
+}
+
+.equal-height {
+    display: flex;
+}
+
 #topItems {
     display: flex;
     flex-direction: column;
@@ -114,6 +100,21 @@ body {
     height: 100%;
 }
 
+.card {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 20px;
+    background-color: #fff;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.card-title {
+    margin-bottom: 20px;
+}
+
 #topItems .item {
     width: 100%;
     padding: 10px;
@@ -121,4 +122,16 @@ body {
     border: 1px solid #ccc;
     border-radius: 5px;
     text-align: center;
+}
+
+.flex-grow-1 {
+    flex-grow: 1;
+}
+
+.mt-auto {
+    margin-top: auto;
+}
+
+#categoryButtons {
+    margin-top: 10px;
 }
